# BSRichPresence

./: Cargo.toml  README.md  flake.nix
BSDataPuller/: Cargo.toml  dataexample.txt
BSDataPuller/src/: lib.rs  schema.rs  schemaLivedata.rs  thread.rs
BSDataPuller/src/livedata/: schema.rs
BSRichPresence/: Cargo.toml
BSRichPresence/src/: bs_processing.rs  bs_richpresence.rs  main.rs
RichPresence/: Cargo.toml
RichPresence/src/: bs_processing.rs  bs_richpresence.rs  main.rs
beat_saver/: Cargo.toml
beat_saver/src/: lib.rs  schema.rs
config/: Cargo.toml
config/src/: lib.rs  schema.rs
