[package]
name = "BSDataPuller"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
reqwest = "0.12.15"
reqwest-websocket = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
