[package]
name = "RichPresence"
version = "0.1.0"
edition = "2024"

[dependencies]
BSDataPuller = { path = "../BSDataPuller" }
config = { path = "../config" }
discordipc = "0.1.1"
tokio = { version = "1.44.2", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
